--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MoodMirror - AI-Powered Mental Health Analysis</title>
+    <title>Mindscape AI - AI-Powered Mental Health Analysis</title>
     <meta name="description" content="MoodMirror is an AI-driven mental health platform that integrates social media sentiment analysis and wearable device data to provide interactive health insights." />
   </head>
   <body>
